--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,2 +1,11 @@
-<h1>Lists#show</h1>
-<p>Find me in app/views/lists/show.html.erb</p>
+<h1>タイトル</h1>
+<p>
+  <%= @list.title %>
+</p>
+
+<h1>説明</h1>
+<P>
+  <%= @list.body %>
+</P>
+
+<%= link_to '編集', edit_list_path(@list.id) %>
